dim/spec/test_input/invalid_input/parent_dir_in_path.dim
Config:
  - originator: CompanyName
    files: modules/../test_module_1.dim
    category: module
